--- a/index.html
+++ b/index.html
@@ -45,15 +45,13 @@
 			</div>
 			<div class="col-sm-9">
 				<div class="main-content">
-					<div class="col-sm-12">
-						<div class="banner">
-							<div class="wrap-text">
-								<h1>Looking for a web developer?</h1>
-								<p>
-									I’m a web developer living in Vietnam. I make web application and always want to create awesome stuffs. 
-								</p>
-								<span>&lt;Web developer&sol; Front-end developer&gt;</span>
-							</div>
+					<div class="banner">
+						<div class="wrap-text">
+							<h1>Looking for a web developer?</h1>
+							<p>
+								I&#39;m a web developer living in Vietnam. I make web application and always want to create awesome stuffs. 
+							</p>
+							<span>&lt;Web developer&sol; Front-end developer&gt;</span>
 						</div>
 					</div>
 					<div class="about-me">
