--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 		<!-- 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="navbar" aria-expanded="false" aria-controls="navbar">
 						<span class="navbar-toggler-icon"></span>
 					</button> -->
-					<div class="navbar-collapse" id="navbar">
+					<!-- <div class="navbar-collapse" id="navbar"> -->
+						<div class="row">
 						<div class="navbar-brand">
-							<img src="images/portfolio.jpg" width="223px" height="223px">
+							<img src="images/portfolio.jpg" width="223px" height="223px" class="col-sm-12">
 							<h2 class="mt-3">Quoc Le</h2>
 							<h3 class="mt-1">Web Developer</h3>
 						</div>
@@ -39,8 +40,8 @@
 							<li>
 								<img src="images/about-me.png" width="16px" height="16px"><a href="#">Contact me</a>
 							</li>
-						</ul>
-					</div>
+						</ul></div>
+					<!-- </div> -->
 				</nav>
 			</div>
 			<div class="col-sm-9">
