--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
 <body>
 	
 	<div class="fluid-container">
-		<div class="row">
-			<div class="col-sm-3">
+		
 				<nav class="navbar navbar-inverse navbar-fixed-left">
 		<!-- 			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="navbar" aria-expanded="false" aria-controls="navbar">
 						<span class="navbar-toggler-icon"></span>
 					</button> -->
 					<!-- <div class="navbar-collapse" id="navbar"> -->
-						<div class="row">
+						<!-- <div class="row"> -->
 						<div class="navbar-brand">
-							<img src="images/portfolio.jpg" width="223px" height="223px" class="col-sm-12">
+							<img src="images/portfolio.jpg" width="223px" height="223px">
 							<h2 class="mt-3">Quoc Le</h2>
 							<h3 class="mt-1">Web Developer</h3>
 						</div>
@@ -40,46 +39,55 @@
 							<li>
 								<img src="images/about-me.png" width="16px" height="16px"><a href="#">Contact me</a>
 							</li>
-						</ul></div>
+						</ul><!-- </div> -->
 					<!-- </div> -->
 				</nav>
-			</div>
-			<div class="col-sm-9">
 				<div class="main-content">
-					<div class="banner">
-						<div class="wrap-text">
-							<h1>Looking for a web developer?</h1>
-							<p>
-								I&#39;m a web developer living in Vietnam. I make web application and always want to create awesome stuffs. 
-							</p>
-							<span>&lt;Web developer&sol; Front-end developer&gt;</span>
+					<section class="banner page-section">
+							<div class="wrap-text">
+								<h1>Looking for a web developer?</h1>
+								<p>
+									I&#39;m a web developer living in Vietnam. I make web application and always want to create awesome stuffs. 
+								</p>
+								<span>&lt;Web developer&sol; Front-end developer&gt;</span>
+							</div>
+					</section>
+					<section class="about-me page-section">
+							<div class="wrap">
+								<h1 class="">About me</h1>
+								<p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+								<button type="button" class="btn btn-link">HTML5</button>
+								<button type="button" class="btn btn-link">CSS3</button>
+								<button type="button" class="btn btn-link">Javascript</button>
+								<button type="button" class="btn btn-link">Jquery</button>
+								<button type="button" class="btn btn-link">SASS</button>
+								<button type="button" class="btn btn-link">Bootstrap</button>
+								<button type="button" class="btn btn-link">Github</button>
+								<button type="button" class="btn btn-link">Photoshop</button>
+							</div>
+							<img src="images/rectangle-7-copy.png" class="img-fluid">
+					</section>
+					<section class="portfolio page-section">
+						<div class="row">
+							<div class="wrap">
+								<h1>My portfolio</h1>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+								<div class="gallery">
+									<img src="images/rectangle-8.png" width="256px" height="200px">
+									<img src="images/rectangle-8.png" width="256px" height="200px">
+									<img src="images/rectangle-8.png" width="256px" height="200px">
+									<img src="images/rectangle-8.png" width="256px" height="200px">
+									<img src="images/rectangle-8.png" width="256px" height="200px">
+									<img src="images/rectangle-8.png" width="256px" height="200px">
+								</div>
+								<button class="btn btn-link">See more project</button>
+							</div>
 						</div>
-					</div>
-					<div class="about-me">
-						<h1>About me</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						<img src="images/rectangle-7-copy.png">
-						<button>NodeJS</button>
-						<button>NodeJS</button>
-						<button>NodeJS</button>
-					</div>
-					<div class="portfolio">
-						<h1>My portfolio</h1>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						<div class="gallery">
-							<img src="rectangle-8" width="256px" height="200px">
-							<img src="rectangle-8" width="256px" height="200px">
-							<img src="rectangle-8" width="256px" height="200px">
-							<img src="rectangle-8" width="256px" height="200px">
-							<img src="rectangle-8" width="256px" height="200px">
-							<img src="rectangle-8" width="256px" height="200px">
-						</div>
-					</div>
-					<div class="contact"></div>
-					<div class="footer"></div>
+					</section>
+					<section class="contact"></section>
+					<section class="footer"></section>
 				</div>
 			</div>
-		</div>
 	</div>
 	
 	
