--- a/index2.html
+++ b/index2.html
@@ -69,12 +69,15 @@
 		<h1>My portfolio</h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 		<div class="gallery">
-			<img src="images/rectangle-8.png" width="256px" height="200px">
-			<img src="images/rectangle-8.png" width="256px" height="200px">
-			<img src="images/rectangle-8.png" width="256px" height="200px">
-			<img src="images/rectangle-8.png" width="256px" height="200px">
-			<img src="images/rectangle-8.png" width="256px" height="200px">
-			<img src="images/rectangle-8.png" width="256px" height="200px">
+			
+		<div class="items">
+			<img src="images/rectangle-8.png">
+		        <div class="overlay">
+		            <div class="title">
+		            	a
+		            </div>
+		        </div>
+	    	</div>
 		</div>
 		<button class="btn btn-link">See more project</button>
 	</div>
@@ -87,9 +90,9 @@
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 		<form>
 			<div class="form-group">
-				<input type="text"  id="inputEmail3" placeholder="Your Name" class="inline">
-				<input type="email"  id="inputPassword3" placeholder="Email" class="inline">
-				<input type="tel" class="form-control" id="inputPassword3" placeholder="Mobile Number" class="inline">
+				<input type="text"  id="inputEmail" placeholder="Your Name" class="inline">
+				<input type="email"  id="inputPassword" placeholder="Email" class="inline">
+				<input type="tel" id="inputMobile" placeholder="Mobile Number" class="inline">
 			</div>
 			<textarea class="input-control" placeholder="Your messeage"></textarea>
 		</form>
@@ -107,7 +110,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
+<!-- <script src="js/owl.carousel.min.js"></script> -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
 </html>
