--- a/index2.html
+++ b/index2.html
@@ -68,18 +68,64 @@
 	<div class="wrap">
 		<h1>My portfolio</h1>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-		<div class="gallery">
-			
-		<div class="items">
-			<img src="images/rectangle-8.png">
-		        <div class="overlay">
-		            <div class="title">
-		            	a
-		            </div>
-		        </div>
-	    	</div>
+		<div class="wrap-items">
+		  <div class="item">
+		     <div class="hovereffect">
+		          <img src="images/item1.png" alt="">
+		          <div class="overlay">
+		             <h2>Portfolio</h2>
+		             <a class="info" href="#">Read more +</a>
+		          </div>
+		      </div>
+		  </div>
+		  <div class="item">
+		     <div class="hovereffect">
+		          <img src="images/item2.png" alt="">
+		          <div class="overlay">
+		             <h2>Aromo</h2>
+		             <a class="info" href="#">Read more +</a>
+		          </div>
+		      </div>
+		  </div>
+		  <div class="item">
+		     <div class="hovereffect">
+		          <img src="images/item3.png" alt="">
+		          <div class="overlay">
+		             <h2>More Project</h2>
+		             <a class="info" href="#">Read more +</a>
+		          </div>
+		      </div>
+		  </div>
+		  <div class="item">
+		     <div class="hovereffect">
+		          <img src="images/item4.png" alt="">
+		          <div class="overlay">
+		             <h2>More Project</h2>
+		             <a class="info" href="#">Read more +</a>
+		          </div>
+		      </div>
+		  </div>
+		  <div class="item">
+		     <div class="hovereffect">
+		          <img src="images/item5.png" alt="">
+		          <div class="overlay">
+		             <h2>More Project</h2>
+		             <a class="info" href="#">Read more +</a>
+		          </div>
+		      </div>
+		  </div>
+		  <div class="item">
+		     <div class="hovereffect">
+		          <img src="images/item5.png" alt="">
+		          <div class="overlay">
+		             <h2>More Project</h2>
+		             <a class="info" href="#">Read more +</a>
+		          </div>
+		      </div>
+		  </div>
 		</div>
-		<button class="btn btn-link">See more project</button>
+
+		<button class="btn btn-link"><span>	See more project</span> </button>
 	</div>
   </div> <!-- End of Portfolio -->
 
