--- a/index2.html
+++ b/index2.html
@@ -51,16 +51,17 @@
   	</div>
   	<ul class="">
 		<li>
-			<img src="images/about-me.png" width="16px" height="16px"><a href="#">Home</a>
+			<img class="svg" src="images/home.svg" width="16px" height="16px"><a href="#">Home</a>
+			
 		</li>
 		<li>
 			<img src="images/about-me.png" width="16px" height="16px"><a href="#">About me</a>
 		</li>
 		<li>
-			<img src="images/about-me.png" width="16px" height="16px"><a href="#">Portfolio</a>
+			<img src="images/portfolio.png" width="16px" height="16px"><a href="#">Portfolio</a>
 		</li>
 		<li>
-			<img src="images/about-me.png" width="16px" height="16px"><a href="#">Contact me</a>
+			<img src="images/contact.png" width="16px" height="16px"><a href="#">Contact me</a>
 		</li>
 	</ul>
   </div> <!-- End of Sidebar -->
@@ -148,11 +149,6 @@
   <div class="footer"><span>2018 &copy; All rights reserved.</span>
   </div>
 </div>
-
-	
-
-
-
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
